# model-compiler

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build.sh
examples/: comprehensive_test.fm  error_test_suite.fm  podcast.bbfm  podcast.fm  podcast.p3  test.p3  test_all_literals.bbfm  test_bad_invariant.fm  test_bool.bbfm  test_circular_inheritance.bbfm  test_comprehensive.bbfm  test_computed_error_invalid_member.fm  test_computed_error_member_on_primitive.fm  test_computed_error_undefined_field.fm  test_computed_inheritance.fm  test_computed_member_access.fm  test_computed_simple.fm  test_duplicate_field.fm  test_duration.bbfm  test_error_column.fm  test_expressions.fm  test_inheritance.bbfm  test_inherits.bbfm  test_invariant.bbfm  test_literals.bbfm  test_missing_semicolon.fm  test_optional.bbfm  test_question_mark.bbfm  test_shorthand.bbfm  test_simple.bbfm  test_tag.bbfm  test_timestamp_field.bbfm  test_timestamp_name.bbfm  test_type_error_int_real.fm  test_type_error_member_access.fm  test_type_promotion_ok.fm  test_undefined_type.fm  test_wrong_case.bbfm
include/: AST.h  Common.h  Console.h  Driver.h  SemanticAnalyzer.h
src/: AST.cpp  Console.cpp  Driver.cpp  SemanticAnalyzer.cpp  lexer.l  main.c  main.cpp  model-compiler.l  model-compiler.y  parser.y
